fixed text overflow

--- a/client/styles/css/navigationForm.css
+++ b/client/styles/css/navigationForm.css
@@ -1,23 +1,22 @@
 .nav-containerForm {
   background-color: #00a06e;
-  height: 350px;
   padding-top: 110px;
   width: 100%; }
   .nav-containerForm--white {
-    position: absolute;
     width: 100%;
     height: 100px;
     top: 362px;
     background-color: #f9f9f9;
     height: 100px;
-    border-radius: 200px 200px 0 0; }
+    border-radius: 200px 200px 0 0;
+    padding-bottom: 15px; }
   .nav-containerForm--green {
     background-color: #7BBDA8;
     border-radius: 200px 200px 0 0;
     width: 93%;
     left: 37px;
     height: 100px;
-    margin: 4% auto; }
+    margin: 0 auto -45px; }
 
 p {
   margin: 0; }
@@ -26,4 +25,5 @@ p {
   color: #f9f9f9;
   margin: 0 auto;
   width: 90%;
-  font-size: 4em; }
+  font-size: 4em;
+  padding-bottom: 50px; }
