--- a/client/styles/css/styles.css
+++ b/client/styles/css/styles.css
@@ -99,7 +99,8 @@ li {
   color: #202020;
   text-align: center;
   font-weight: 900;
-  font-size: 2.5rem; }
+  font-size: 2.5rem;
+  margin-top: 20px; }
 
 .more__questions {
   border: 2px solid #132f58;
